--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>I need it </string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>I need it in background</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Because</string>
 	<key>CFBundleDevelopmentRegion</key>
